manifest/istio/greetings-application-v2.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns-workshop
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greetings-v2
  namespace: ns-workshop
  labels:
    app: greetings
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greetings
      version: v2
  template:
    metadata:
      labels:
        app: greetings
        version: v2
    spec:
      containers:
        - name: greetings
          image: gcr.io/my-lab-247617/greetings:2.0.0-RELEASE
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: "http"
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: greetings
  namespace: ns-workshop
  labels:
    app: greetings
    service: greetings
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: greetings
