manifest/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: greetings-gateway
  namespace: ns-workshop
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: greetings
  namespace: ns-workshop
spec:
  hosts:
    - "*"
  gateways:
    - greetings-gateway
  http:
    - match:
        - uri:
            exact: /
      route:
        - destination:
            host: greetings
            port:
              number: 8080
