manifest/istio/virtual-services-v1-v2-50.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: greetings
  namespace: ns-workshop
spec:
  hosts:
    - "*"
  gateways:
    - greetings-gateway
  http:
    - route:
        - destination:
            host: greetings
            subset: v3
          weight: 50
        - destination:
            host: greetings
            subset: v4
          weight: 50
---
