manifest/istio/virtual-services-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: greetings
  namespace: ns-workshop
spec:
  hosts:
    - "*"
  gateways:
    - greetings-gateway
  http:
    - route:
        - destination:
            host: greetings
            subset: v1
          weight: 100
---
